force-app/main/default/objects/MFA_Registration__c.object
<CustomObject>
    <description>Tracks MFA registration attempts and status for audit purposes</description>
    <label>MFA Registration</label>
    <nameField>
        <displayFormat>MFA-{0000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MFA Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>