force-app/main/default/objects/MFA_Registration__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <label>Registration Date</label>
    <type>DateTime</type>
</CustomField>