force-app/main/default/objects/MFA_Registration__c/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Registration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>